--- a/social-media-dashboard/public/styles.css
+++ b/social-media-dashboard/public/styles.css
@@ -41,14 +41,14 @@ header {
     height: 12em;
     width: 14em;
     display: inline-block;
-    margin: 0 1em 0 1em;
+    margin: 1em 1em 0 1em;
     border-radius: 5px;
 }
 
 .bottom-card {
     background-color: hsl(227, 47%, 96%);
     text-align: left;
-    margin: 1em 1em 0 1em;
+    margin: 1em 1em 1em 1em;
     height: 6em;
     width: 14em;
     border-radius: 5px;
@@ -73,7 +73,7 @@ header {
 
 
 .main-div-mid {
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 /* Top Card Components */
