--- a/social-media-dashboard/public/styles.css
+++ b/social-media-dashboard/public/styles.css
@@ -34,6 +34,7 @@ header {
     display: inline-block;
     position: relative;
     margin: -200px auto 0;
+    min-width: 1025px;
 }
 
 .top-card {
